--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-animate-gif",
-  "version": "1.0.3",
-  "description": "",
+  "version": "1.0.4",
+  "description": "Node-red node for combining a set of buffers into an animated gif",
   "main": "animate-gif.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
