--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-animate-gif",
-  "version": "1.0.9",
+  "version": "2.0.0",
   "description": "Node-red node for combining a set of buffers into an animated gif",
   "main": "animate-gif.js",
   "scripts": {
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/i8beef/node-red-contrib-animate-gif#readme",
   "dependencies": {
     "gif-encoder": "^0.7.2",
-    "sharp": "^0.23.1"
+    "jimp": "^0.16.1"
   },
   "node-red": {
     "nodes": {
